--- a/game-warrior-gh-pages/game-warrior-gh-pages/game-reviews2.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/game-reviews2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Game review - Overwatch</title>
+	<title>Game review - PUBG</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
 	<meta name="keywords" content=" game, gaming, html">
@@ -76,13 +76,13 @@
 
 
 	<!-- Page info section -->
-	<section class="page-info-section set-bg" data-setbg="img/slider-1.jpg">
+	<section class="page-info-section set-bg" data-setbg="img/slider-2.jpg">
 		<div class="pi-content">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 text-white">
-						<h2>Overwatch</h2>
-						<p>и събитието им "Overwatch Winter Wonderland 2019".</p>
+						<h2>PLAYERUNKNOWN’S BATTLEGROUNDS</h2>
+						<p>и последната обновление на играта.</p>
 					</div>
 				</div>
 			</div>
@@ -96,19 +96,20 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8">
-					<div class="blog-thumb set-bg" data-setbg="img/overwatch.jpg">
+					<div class="blog-thumb set-bg" data-setbg="img/Pubg.jpg">
 					</div>
 					<div class="blog-content">
-						<h3>Overwatch Winter Wonderland 2019</h3>
-						<p>Blizzard Entertainment отново удариха в десетката, като пуснаха своето <storng>Overwatch Winter Wonderland 2019</storng> в едноименната мултиплеър игра. Потребителите бяха приятно изненадани, че все още съществуват подобни инициативи, а именно играчите да получат нови предмети без допълнително заплащане. Въпреки това съществува и варианта за закупуване на кутии с предмети. </p>
-						<p>За да получат съответните бонуси, играчите трябва да играят играта и да побеждават, като за определен брой победи получават различни предмети. През третата седмица на събитието, при спечелването на 3 битки, играчите получават "Snow Angel Player Icon". При малко повече победи, 6 на брой, потребителите на играта получават като подарък "Winter Spell Spray".А когато играча достигне 9 победи, играча се сдобива със "Snow Angel Mercy Skin", показан на снимката по горе.</p> 
-						<p>Разбира се, има и "утешителни" награди, а именно различни предмети и облици за различните герои, с които играчите могат да се сдобият като се представят добре по време на битките. </p>
+						<h3>PUBG Patch 5.3</h3>
+						<p>Един от най - популярните жанрове на компютърните игри в днешно време е така нареченият <i>first-person shooter</i> (англ.) или игри, в които играчът вижда играта и стреля от първо лице. PLAYERUNKNOW'S BATTLEGROUNDS, известна още като PUBG, е енда от тези игри, която се любува на доста голям интерес от публиката.</p>
+						<p>В средата на месец декември, играта получи ново обновление до версия 5.3, с което създателите й от PUBG Corporation добавиха много нови опции. </p>
+						<p>Едно от големите нововъдения е клауд сейвинга, т.е. играчите ще могат да запазват пресоналните си настройки в облак и при влизане в играта от друго устройство, те дирекно ще се прилагат. </p> 
+						<p>Още една от новостите е, че вече играчите могат да избират свото любимо оръжие. Те могат да изберат само 1 от всички оръжия в играта, като избраното от тях винаги ще се показва най-отгоре в листа за избор. </p>
 						<br><br>
-						<p>Видео със всички облици, с които можете да се сдобиете, можете да видите тук:</p>
+						<p>Видео със всички новости, добавени в играта, можете да видите тук:</p>
 					</div>
 
 					<div class="comment-form-warp">
-						<iframe id="gameplay" height="395" src="https://www.youtube.com/embed/SDOHK-AbHXA">
+						<iframe id="gameplay" height="395" src="https://www.youtube.com/embed/OkaA9K_ixps">
                         </iframe>
 					</div>
 				</div>
@@ -126,24 +127,24 @@
 						<h4 class="widget-title">Галерия</h4>
 						<div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/12.png">
+								<img src="img/review/16.jpg">
 								</div>
 							</div>
                         <div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/13.png">
+								<img src="img/review/17.jpg">
 								</div>
 							</div>
                         
 							<div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/14.jpg">
+								<img src="img/review/18.jpg">
 								</div>
 							</div>
 							
                         <div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/15.jpg">
+								<img src="img/review/19.jpg">
 								</div>
 							</div>
 					</div>
