--- a/game-warrior-gh-pages/game-warrior-gh-pages/index.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/index.html
@@ -87,7 +87,7 @@
 					<div class="container">
 						<h2>Най - добрите <span>Игри</span> на пазара</h2>
 						<p><strong>PUBG</strong>: Последният ъпдейт в играта (версия 5.3) дойде през месец Декември<br> с много промени. Вече играчите могат да си запазят настройките за играта в клауд,<br> да избират своето любимо оръжие и още ...</p>
-						<a href="#" class="site-btn">Прочетете още</a>
+						<a href="game-reviews2.html" class="site-btn">Прочетете още</a>
 					</div>
 				</div>
 			</div>
