Snowflakes add to all existing pages + js to external file

--- a/game-warrior-gh-pages/game-warrior-gh-pages/HappyNewYear.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/HappyNewYear.html
@@ -48,7 +48,7 @@
 
     </div>
 <div class="wrap">
-  <button class="button" id="showMe" onclick="location.href='index.html';" value="Go to Main Page">Go to main page</button>
+  <button class="button" id="showMe" onclick="location.href='index.html';" value="Go to Main Page">Към сайта</button>
 
 
 </div>
