--- a/game-warrior-gh-pages/game-warrior-gh-pages/index.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/index.html
@@ -82,12 +82,22 @@
 					</div>
 				</div>
 			</div>
+            
 			<div class="hs-item set-bg" data-setbg="img/slider-2.jpg">
 				<div class="hs-text">
 					<div class="container">
 						<h2>Най - добрите <span>Игри</span> на пазара</h2>
 						<p><strong>PUBG</strong>: Последният ъпдейт в играта (версия 5.3) дойде през месец Декември<br> с много промени. Вече играчите могат да си запазят настройките за играта в клауд,<br> да избират своето любимо оръжие и още ...</p>
 						<a href="pubg.html" class="site-btn">Прочетете още</a>
+					</div>
+				</div>
+			</div>
+            <div class="hs-item set-bg" data-setbg="img/review/30.jpg">
+				<div class="hs-text">
+					<div class="container">
+						<h2>Най - добрите <span>Игри</span> на пазара</h2>
+						<p><strong>Euro Truck Simulator 2</strong>: Новият експанжън към играта вече е налице,<br> а именно "Road to Black Sea"! Със своите повече от 20 нови града<br> както и безброй градчета този експанжън има по нещо за всеки един запален геймър!</p>
+						<a href="ets.html" class="site-btn">Прочетете още</a>
 					</div>
 				</div>
 			</div>
