anthem, spiderman, cyberpunk

--- a/game-warrior-gh-pages/game-warrior-gh-pages/ets.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/ets.html
@@ -4,7 +4,7 @@
 	<title>Game review - ETS2</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html">
+	<meta name="keywords" content=" game, gaming, html, ETS2, DLS, Road to the Black Sea, Truck, Simulator,Trucks">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
@@ -86,7 +86,7 @@
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 text-white">
 						<h2>Euro Truck Simulator 2</h2>
-						<p>Пътя към черно море</p>
+						<p>и новото им DLS - Road to the Black Sea</p>
 					</div>
 				</div>
 			</div>
@@ -104,13 +104,13 @@
 					</div>
 					<div class="blog-content">
 						<h3>Euro Truck Simulator 2</h3>
-						<p>SCS Software отново се работи по ETS2, разширявайки това, което може би е най-голямата карта в игрите. Дългоочакваният път към балканите, разширение за Euro Truck Simulator 2 е пристигнал и е чудесно допълнение към вечнозелените франчайзинг за товарни автомобили.</p>
-						<p>Както обикновено, вниманието към детайла е фантастично, и по-много тук, за да зарадвате огромната база от фенове на ETS2, която се задържа с играта през последните седем или дори години. Румъния и България са част от ЕС, но и двете не са в рамките на Шенгенското пространство (единна зона от 26 европейски държави, които са премахнали паспортния контрол на взаимните си граници), така че граничните пунктове от държавите от Шенгенското пространство все още присъстват и са пресъздадени в това DLC. Определено можете да кажете, когато пътувате от Румъния до България, че сте на път да преминете границата, това е голям момент при всяка доставка. Както винаги с това студио, когато прави нещо, прави ги правилно и <i>Пътят до Черно море</i> е страхотен пример. </p>
-						<p>Играта е много близо до това да пресъздаде всички пътища на Европейският съюз. Липсват ни останалата част от балканските държави, както и Испания, Португалия и по някаква странна причина, Ирландия и Северна Ирландия. Гледайки напред, би било хубаво да се добавят и Каналските острови, евентуално с испански и португалски DLC-та, включително някои от съответните им острови, които биха допринесли за много живописна игра. И въпреки че DLC са доста скъпи за игра, която се нарича, Euro Truck Simulator, въпреки че по-голямата част от Европа не е в базовата версия, чистият мащаб и обемът на работа, който трябва да се превърне в копирането на тези нации в цифрова форма никога не е за подценяване. След като се запознаете с ETS2, лесно е да разберете защо SCS работи по DLC след DLC.</p> 
+						<p>В SCS Software отново се работи по ETS2, разширявайки това, което може би е най-голямата карта в игрите. Дългоочакваният път към балканите, разширение за Euro Truck Simulator 2, е пристигнал и е чудесно допълнение към вечнозелените франчайзи за товарни автомобили.</p>
+						<p>Както обикновено, вниманието към детайла е фантастично и много по - добро, за да зарадвате огромната база от фенове на ETS2, която се задържа с играта през последните седем или дори повече години. Румъния и България са част от ЕС, но и двете не са в рамките на Шенгенското пространство (единна зона от 26 европейски държави, които са премахнали паспортния контрол на взаимните си граници), така че граничните пунктове от държавите от Шенгенското пространство все още присъстват и са пресъздадени в това DLC. Определено можете да кажете, че когато пътувате от Румъния до България и сте на път да преминете границата, това е голям момент при всяка доставка. Както винаги с това студио, когато прави нещо, прави ги правилно и <i>Road to the Black Sea</i> е страхотен пример. </p>
+						<p>Играта е много близо до това, да пресъздаде всички пътища на Европейският съюз. Липсват останалата част от балканските държави, както и Испания, Португалия и по някаква странна причина Ирландия и Северна Ирландия. Гледайки напред, би било хубаво да се добавят и Канаrските острови, евентуално с испански и португалски DLC-та, включително някои от съответните им острови, които биха допринесли за много живописна игра. И въпреки че DLC са доста скъпи за игра, която се нарича "Euro Truck Simulator", въпреки че по-голямата част от Европа не е в базовата версия, чистият мащаб и обемът на работа, който трябва да се превърне в копирането на тези нации в цифрова форма никога не е за подценяване. След като се запознаете с ETS2, лесно е да разберете защо SCS работи по DLC след DLC.</p> 
                         
-						<p>DLC-то може да закупите от <i>Steam </i><a href="https://store.steampowered.com/app/1056760/Euro_Truck_Simulator_2__Road_to_the_Black_Sea/?fbclid=IwAR2tgXgmqM0q8kpdiltUuSQmVYqdSPB8ZBJC3yl8_1iz9B7fe6yLlNdgBNY">на линка тук</a>.</p>
+						<p>DLC-то може да закупите от <i>Steam </i> на линка<a href="https://store.steampowered.com/app/1056760/Euro_Truck_Simulator_2__Road_to_the_Black_Sea/?fbclid=IwAR2tgXgmqM0q8kpdiltUuSQmVYqdSPB8ZBJC3yl8_1iz9B7fe6yLlNdgBNY"> тук</a>.</p>
 						<br><br>
-						<p>Уникалният трейлър на <i>World of Warcraft: Battle for Azeroth</i> може да видите на клипа по-долу:</p>
+						<p>Уникалният трейлър на <i>ETS 2 - Road to the Black Sea</i> може да видите на клипа по-долу:</p>
 					</div>
 
                     <div class="comment-form-warp">
