--- a/game-warrior-gh-pages/game-warrior-gh-pages/fortnite.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/fortnite.html
@@ -4,7 +4,7 @@
 	<title>Game review - Fortnite</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html">
+	<meta name="keywords" content=" game, gaming, html, Fortnite, Retributon, Zombie, shooting">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
@@ -103,16 +103,16 @@
 					</div>
 					<div class="blog-content">
 						<h3>Fortnite: Retributon</h3>
-						<p> Пуснат е пакет от <i>Fortnitemares</i>, пълен с нови предизвикателства и ще ви постави на изпитание.</p>
+						<p> Пуснат е пакет от <i>Fortnitemares</i>, пълен с нови предизвикателства, който ще ви постави на изпитание.</p>
 						<p>За да завършите това предизвикателство, ще трябва да премахнете не по-малко от 200 приятели във Възмездието. Просто отидете на раздела за рекламно послание и отидете на портала „Възмездие“. </p>
 						<p>„Fiends“ са това, което обикновено наричаме зомбита във Fortnite. Това са лилави хуманоиди, които ни нападат и могат да бъдат убити, за да си върнем щита. В този режим ще трябва да преживеете вълни от зомбита. Ако принципът на мини играта е да се изпълнява, нищо не ви пречи да се спрете за секунда и  да избиете неживите.</p> 
                         <p>
                         Събирайки дърва, ще можете да купувате оръжие от дистрибутори. За да убиете зомбита, техниката е проста: изчакайте, докато те се подредят зад вас, след като сте ги накарали да вървят в кръг, след това се обърнете и стреляйте. Най-„практичните“ оръжия за бързо потвърждаване на това предизвикателство са експлозивите или тежките картечници!
                         </p>
                         
-						<p>За да научите как по-лесно да се справите погледнете <i>упътването </i><a href="https://fortniteinsider.com/complete-all-fortnite-retribution-creative-quests-how-to-collect-resources-in-retribution-guide/">на линка тук</a>.</p>
+						<p>За да научите как по - лесно да се справите погледнете <i>упътването на линка </i><a href="https://fortniteinsider.com/complete-all-fortnite-retribution-creative-quests-how-to-collect-resources-in-retribution-guide/">тук</a>.</p>
 						<br><br>
-						<p>Уникалният трейлър на <i>World of Warcraft: Battle for Azeroth</i> може да видите на клипа по-долу:</p>
+						<p>Геймплей на <i>Fortnite: Retribution</i> може да видите на клипа по долу:</p>
 					</div>
 
                     <div class="comment-form-warp">
