--- a/game-warrior-gh-pages/game-warrior-gh-pages/index.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/index.html
@@ -46,7 +46,7 @@
 		<div class="container">
 			<!-- logo -->
 			<a class="site-logo" href="index.html">
-				<img src="img/logo1.png" alt="">
+				<img src="img/logo1.png" alt="Logo">
 			</a>
 			<div class="user-panel" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Вход</a>  /  <a href="#">Регистрация</a>
 			</div>
@@ -98,6 +98,51 @@
 						<h2>Най - добрите <span>Игри</span> на пазара</h2>
 						<p><strong>Euro Truck Simulator 2</strong>: Новият експанжън към играта вече е налице,<br> а именно "Road to Black Sea"! Със своите повече от 20 нови града<br> както и безброй градчета този експанжън има по нещо за всеки един запален геймър!</p>
 						<a href="ets.html" class="site-btn">Прочетете още</a>
+					</div>
+				</div>
+			</div>
+			<div class="hs-item set-bg" data-setbg="img/review/51.jpg">
+				<div class="hs-text">
+					<div class="container">
+						<h2>Най - добрите <span>Игри</span> на пазара</h2>
+						<p><strong>Anthem</strong>: възход или падение</p>
+						<a href="anthem.html" class="site-btn">Прочетете още</a>
+					</div>
+				</div>
+			</div>
+			<div class="hs-item set-bg" data-setbg="img/review/42.jpg">
+				<div class="hs-text">
+					<div class="container">
+						<h2>Най - добрите <span>Игри</span> на пазара</h2>
+						<p><strong>Cyberpunk 2077</strong>: може би най - хайпнатата игра в момента.</p>
+						<a href="cyberpunk.html" class="site-btn">Прочетете още</a>
+					</div>
+				</div>
+			</div>
+			<div class="hs-item set-bg" data-setbg="img/review/39.jpg">
+				<div class="hs-text">
+					<div class="container">
+						<h2>Най - добрите <span>Игри</span> на пазара</h2>
+						<p><strong>Spiderman</strong>: играта, тръгнала от един комикс.</p>
+						<a href="spiderman.html" class="site-btn">Прочетете още</a>
+					</div>
+				</div>
+			</div>
+			<div class="hs-item set-bg" data-setbg="img/review/24.jpg">
+				<div class="hs-text">
+					<div class="container">
+						<h2>Най - добрите <span>Игри</span> на пазара</h2>
+						<p><strong>World of WarCraft</strong>: 15 години от началото.</p>
+						<a href="wow.html" class="site-btn">Прочетете още</a>
+					</div>
+				</div>
+			</div>
+			<div class="hs-item set-bg" data-setbg="img/review/24.jpg">
+				<div class="hs-text">
+					<div class="container">
+						<h2>Най - добрите <span>Игри</span> на пазара</h2>
+						<p><strong>Fortnite</strong>: най - добрата игра за 2018.</p>
+						<a href="fortnite.html" class="site-btn">Прочетете още</a>
 					</div>
 				</div>
 			</div>
