--- a/game-warrior-gh-pages/game-warrior-gh-pages/spiderman.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/spiderman.html
@@ -4,7 +4,7 @@
 	<title>Game review - Spiderman</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html,spiderman, sony">
+	<meta name="keywords" content=" game, gaming, World of GAMING,spiderman, sony">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
