--- a/game-warrior-gh-pages/game-warrior-gh-pages/anthem.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/anthem.html
@@ -4,8 +4,7 @@
 	<title>Game review - Anthem</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html,
-	Anthem">
+	<meta name="keywords" content=" game, gaming,World of GAMING, Anthem">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
