--- a/game-warrior-gh-pages/game-warrior-gh-pages/categories.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/categories.html
@@ -4,7 +4,7 @@
 	<title>Gallery</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html">
+	<meta name="keywords" content=" game, gaming,World of GAMING, gallery, pictures, images, games, overwatch, gran turismo, doom, wow, world of warcraft, ets 2, eutro truck simulator, need for speed, nfs, PlayerUnknown Battlegrounds, PUBG, Counter-Strike: Global Overwatch, CS:GO, csgo">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
