--- a/game-warrior-gh-pages/game-warrior-gh-pages/community.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/community.html
@@ -4,7 +4,7 @@
 	<title>About us</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html">
+	<meta name="keywords" content=" game, gaming, World of GAMING, info, about, about us, who are we">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
