--- a/game-warrior-gh-pages/game-warrior-gh-pages/contact.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/contact.html
@@ -4,7 +4,7 @@
 	<title>Contact us</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Game Warrior Template">
-	<meta name="keywords" content="warrior, game, creative, html">
+	<meta name="keywords" content="game, gaming, World of GAMING, contact, e-mail, info">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
