--- a/game-warrior-gh-pages/game-warrior-gh-pages/cyberpunk.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/cyberpunk.html
@@ -4,7 +4,7 @@
 	<title>Game review - Cyberpunk 2077</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html,Cyberpunk, 2077, Cyberpunk 2077">
+	<meta name="keywords" content=" game, gaming, World of GAMING, Cyberpunk, 2077, Cyberpunk 2077">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
