--- a/game-warrior-gh-pages/game-warrior-gh-pages/ets.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/ets.html
@@ -4,7 +4,7 @@
 	<title>Game review - ETS2</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html, ETS2, DLS, Road to the Black Sea, Truck, Simulator,Trucks">
+	<meta name="keywords" content=" game, gaming, World of GAMING, ETS2, DLS, Road to the Black Sea, Truck, Simulator,Trucks">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
