--- a/game-warrior-gh-pages/game-warrior-gh-pages/fortnite.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/fortnite.html
@@ -4,7 +4,7 @@
 	<title>Game review - Fortnite</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html, Fortnite, Retributon, Zombie, shooting">
+	<meta name="keywords" content=" game, gaming, World of GAMING, Fortnite, Retributon, Zombie, shooting">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
