--- a/game-warrior-gh-pages/game-warrior-gh-pages/review.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/review.html
@@ -4,7 +4,7 @@
 	<title>Review</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html, review, reviews, game review, oppinion">
+	<meta name="keywords" content=" game, gaming, World of GAMING, review, reviews, game review, oppinion">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
