--- a/game-warrior-gh-pages/game-warrior-gh-pages/wow.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/wow.html
@@ -4,7 +4,7 @@
 	<title>Game review - WOW</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
-	<meta name="keywords" content=" game, gaming, html,wow, 15 years, anniversary,world of warcraft">
+	<meta name="keywords" content=" game, gaming, World of GAMING,wow, 15 years, anniversary,world of warcraft">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
 	<link href="img/tab-logo.png" rel="shortcut icon"/>
