alt текст и spell check

--- a/game-warrior-gh-pages/game-warrior-gh-pages/anthem.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/anthem.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<!-- logo -->
 			<a class="site-logo" href="index.html">
-				<img src="img/logo1.png" alt="">
+				<img src="img/logo1.png" alt="Logo">
 			</a>
 			<div class="user-panel" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Вход</a>  /  <a href="#">Регистрация</a>
 			</div>
@@ -138,26 +138,26 @@
 						<h4 class="widget-title">Галерия</h4>
 						<div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/47.jpg">
+								<img src="img/review/47.jpg" alt="Anthem-1">
 								</div>
 							</div>
                         <div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/48.jpg">
+								<img src="img/review/48.jpg" alt="Anthem-2">
 								</div>
 							</div>
                         
 							<div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/49.jpg">
+								<img src="img/review/49.jpg" alt="Anthem-3">
 								</div>
 							</div>
 							
                         <div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/50.jpg">
-								</div>
+								<img src="img/review/50.jpg" alt="Anthem-4">
 							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -170,12 +170,12 @@
 <section class="footer-top-section">
 		<div class="container">
 			<div class="footer-top-bg">
-				<img src="img/footer-top-bg.png" alt="">
+				<img src="img/footer-top-bg.png" alt="Footer background">
 			</div>
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="footer-logo text-white">
-						<img src="img/logo1.png" alt="">
+						<img src="img/logo1.png" alt="Logo">
 						<p>За повече информация отностно "World of GAMING", натиснете таба "За нас" от менюто.</p>
 					</div>
 				</div>
@@ -275,7 +275,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
  	<form class="modal-content animate" action="index.html" >
     	<div class="imgcontainer">
       		<span onclick="document.getElementById('id01').style.display='none'" class="close1" title="Close">&times;</span>
-      		<img src="img/logo1.png" alt="Avatar" class="avatar">
+      		<img src="img/logo1.png" alt="Logo" class="avatar">
     	</div>
 
     	<div class="container">
