--- a/game-warrior-gh-pages/game-warrior-gh-pages/categories.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/categories.html
@@ -41,7 +41,7 @@
 		<div class="container">
 			<!-- logo -->
 			<a class="site-logo" href="index.html">
-				<img src="img/logo1.png" alt="">
+				<img src="img/logo1.png" alt="Logo">
 			</a>
 			<div class="user-panel" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Вход</a>  /  <a href="#">Регистрация</a>
 			</div>
@@ -109,8 +109,8 @@
 								<div class="rgi-content">
 									<h5>Overwatch</h5>
 									<div class="rgi-extra">
-										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
-										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
+										<div class="rgi-star"><img src="img/icons/star.png" alt="Звезда"></div>
+										<div class="rgi-heart"><img src="img/icons/heart.png" alt="Любимо"></div>
 									</div>
 								</div>
 							</div>	
@@ -122,8 +122,8 @@
 								<div class="rgi-content">
 									<h5>Gran Turismo 7</h5>
 									<div class="rgi-extra">
-										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
-										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
+										<div class="rgi-star"><img src="img/icons/star.png" alt="Звезда"></div>
+										<div class="rgi-heart"><img src="img/icons/heart.png" alt="Любимо"></div>
 									</div>
 								</div>
 							</div>	
@@ -135,8 +135,8 @@
 								<div class="rgi-content">
 									<h5>DOOM</h5>
 									<div class="rgi-extra">
-										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
-										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
+										<div class="rgi-star"><img src="img/icons/star.png" alt="Звезда"></div>
+										<div class="rgi-heart"><img src="img/icons/heart.png" alt="Любимо"></div>
 									</div>
 								</div>
 							</div>	
@@ -148,8 +148,8 @@
 								<div class="rgi-content">
 									<h5>World of WarCraft</h5>
 									<div class="rgi-extra">
-										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
-										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
+										<div class="rgi-star"><img src="img/icons/star.png" alt="Звезда"></div>
+										<div class="rgi-heart"><img src="img/icons/heart.png" alt="Любимо"></div>
 									</div>
 								</div>
 							</div>	
@@ -161,8 +161,8 @@
 								<div class="rgi-content">
 									<h5>Euro Truck Simulator 2 </h5>
 									<div class="rgi-extra">
-										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
-										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
+										<div class="rgi-star"><img src="img/icons/star.png" alt="Звезда"></div>
+										<div class="rgi-heart"><img src="img/icons/heart.png" alt="Любимо"></div>
 									</div>
 								</div>
 							</div>	
@@ -174,8 +174,8 @@
 								<div class="rgi-content">
 									<h5>Need for Speed </h5>
 									<div class="rgi-extra">
-										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
-										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
+										<div class="rgi-star"><img src="img/icons/star.png" alt="Звезда"></div>
+										<div class="rgi-heart"><img src="img/icons/heart.png" alt="Любимо"></div>
 									</div>
 								</div>
 							</div>	
@@ -187,8 +187,8 @@
 								<div class="rgi-content">
 									<h5>PlayerUnknown's Battlegrounds</h5>
 									<div class="rgi-extra">
-										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
-										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
+										<div class="rgi-star"><img src="img/icons/star.png" alt="Звезда"></div>
+										<div class="rgi-heart"><img src="img/icons/heart.png" alt="Любимо"></div>
 									</div>
 								</div>
 							</div>	
@@ -200,8 +200,8 @@
 								<div class="rgi-content">
 									<h5>Counter-Strike: Global Offensive </h5>
 									<div class="rgi-extra">
-										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
-										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
+										<div class="rgi-star"><img src="img/icons/star.png" alt="Звезда"></div>
+										<div class="rgi-heart"><img src="img/icons/heart.png" alt="Любимо"></div>
 									</div>
 								</div>
 							</div>	
@@ -308,12 +308,12 @@
 	<section class="footer-top-section">
 		<div class="container">
 			<div class="footer-top-bg">
-				<img src="img/footer-top-bg.png" alt="">
+				<img src="img/footer-top-bg.png" alt="Footer background">
 			</div>
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="footer-logo text-white">
-						<img src="img/logo1.png" alt="">
+						<img src="img/logo1.png" alt="Logo">
 						<p>За повече информация отностно "World of GAMING", натиснете таба "За нас" от менюто.</p>
 					</div>
 				</div>
@@ -415,7 +415,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
  	<form class="modal-content animate" action="index.html" >
     	<div class="imgcontainer">
       		<span onclick="document.getElementById('id01').style.display='none'" class="close1" title="Close">&times;</span>
-      		<img src="img/logo1.png" alt="Avatar" class="avatar">
+      		<img src="img/logo1.png" alt="Logo" class="avatar">
     	</div>
 
     	<div class="container">
