--- a/game-warrior-gh-pages/game-warrior-gh-pages/spiderman.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/spiderman.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<!-- logo -->
 			<a class="site-logo" href="index.html">
-				<img src="img/logo1.png" alt="">
+				<img src="img/logo1.png" alt="Logo">
 			</a>
 			<div class="user-panel" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Вход</a>  /  <a href="#">Регистрация</a>
 			</div>
@@ -87,7 +87,7 @@
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 text-white">
 						<h2>Spiderman</h2>
-						<p>или играта, тръгнала от един комикс.</p>
+						<p>или играта, тръгнала от един комикс</p>
 					</div>
 				</div>
 			</div>
@@ -108,12 +108,10 @@
 						<p>Като започнем от феноменалния римейк на Shadow of the Colossus, минем сериозния кандидат за игра на годината God of War, допълним отличния Detroit: Become Human и стигнем до настоящия Spiderman, всичко на ААА ниво, произведено с финансовата подкрепа на японския гигант Sony, е злато.</p>
 						<p>На първо място open world-ът бледнее пред това, което създадоха Rockstar със GTA V и Red Dead Redemption. Всичко е безкрайно схематично и напомня за open world на Assassins Creed преди последния рийбут на серията и друг франчайз на Sony – Infamous. И в началото, когато самият травърсъл се извършва с по-бавни темпове, характерните задачки – намери еди-колко си "паячко" артикула, заснеми еди-колко си специфични локации и т.н. чекбоксове за жанра накланят кантара на преживяването в негативната му скала. Другият проблем е подобен на този, който имах с God of War – преди да развиеш няколко умения, свързани с бойната система или обхождането на света, всичко е леко, как да кажа – монотонно. Не прави голям кеф. </p> 
                         <p>Съвсем естествено, бихме казали неусетно дори, играта влезе в скоростни релси и оттам споменатата схематичност всъщност започна да кефи. Истината е, че в основата си новият Spiderman е аркадна игра, която разполага и с доста добре структурирана история за нуждите на човека паяк. Честно казано, дори не се сещам за по-добра аркадна игра на ААА ниво за последните 4-5 години. С няколко ъпдейта травърсълът се превръща в неописуемо удоволствие, битките с много противници помпят адреналин на кило, а скоковете от мисия в мисия се случват далеч по-плавно. След 20-я процент цялата игра просто кликва.</p>
-
 						<p>Повече информация относно PS4 версията на играта може да видите  <a href="https://www.playstation.com/en-us/games/marvels-spider-man-ps4/">тук</a>.</p>
 						<br><br>
 						<p>Tрейлър на <i>Spiderman</i> може да видите на клипа по долу:</p>
 					</div>
-
                     <div class="comment-form-warp">
 						<iframe id="gameplay" height="395" src="https://www.youtube.com/embed/q4GdJVvdxss">
                         </iframe>
@@ -122,7 +120,6 @@
 					<div class="blog-content">
 						<p>Източник: PC WORLD</p>
 					</div>
-
 				</div>
 				<!-- sidebar -->
 				<div class="col-lg-4 col-md-7 sidebar pt-5 pt-lg-0">
@@ -138,24 +135,24 @@
 						<h4 class="widget-title">Галерия</h4>
 						<div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/38.jpg">
+								<img src="img/review/38.jpg" alt="Spiderman-1">
 								</div>
 							</div>
                         <div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/39.jpg">
+								<img src="img/review/39.jpg" alt="Spiderman-2">
 								</div>
 							</div>
                         
 							<div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/40.jpg">
+								<img src="img/review/40.jpg" alt="Spiderman-3">
 								</div>
 							</div>
 							
                         <div class="latest-blog">
 							<div class="lb-item">
-								<img src="img/review/41.jpg">
+								<img src="img/review/41.jpg" alt="Spiderman-4">
 								</div>
 							</div>
 					</div>
@@ -165,17 +162,16 @@
 	</section>
 	<!-- Page section end -->
 
-
 	<!-- Footer top section -->
 <section class="footer-top-section">
 		<div class="container">
 			<div class="footer-top-bg">
-				<img src="img/footer-top-bg.png" alt="">
+				<img src="img/footer-top-bg.png" alt="Footer background">
 			</div>
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="footer-logo text-white">
-						<img src="img/logo1.png" alt="">
+						<img src="img/logo1.png" alt="Logo">
 						<p>За повече информация отностно "World of GAMING", натиснете таба "За нас" от менюто.</p>
 					</div>
 				</div>
