last spell check

--- a/game-warrior-gh-pages/game-warrior-gh-pages/index.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/index.html
@@ -525,11 +525,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
       	<img src="img/logo1.png" alt="Avatar" class="avatar">
     </div>
     	<div class="container">
-            <label for="email"><b class="login">Имейл адрес на който да изпратим новата Ви парола</b></label>
+            <label for="email"><b class="login">Имейл адрес, на който да изпратим новата Ви парола.</b></label>
       		<input type="text" placeholder="Въведете валиден имейл адрес" name="email" required>
       		<button type="submit">Изпрати</button>
             <button id="no" type="sybmit" formnovalidate>Отказ</button>
-            <p style="text-align: center">Ако не получите имейл от нас до 5 минути проверете <i>SPAM</i> папката или се свържете с нас!</p>
+            <p style="text-align: center">Ако не получите имейл от нас до 5 минути проверете <strong>SPAM</strong> папката или се свържете с нас!</p>
     	</div>
 </form>
 </div> 
